include/hydra_ledger.h

//  *** Draft method, for development use, may change without warning ***
//  Create a new empty ledger instance.
HYDRA_EXPORT hydra_ledger_t *
    hydra_ledger_new (void);
//  *** Draft method, for development use, may change without warning ***
//  Destroy the ledger
HYDRA_EXPORT void
    hydra_ledger_destroy (hydra_ledger_t **self_p);
//  *** Draft method, for development use, may change without warning ***
//  Return ledger size, i.e. number of posts stored in the ledger.
HYDRA_EXPORT size_t
    hydra_ledger_size (hydra_ledger_t *self);
//  *** Draft method, for development use, may change without warning ***
//  Load the ledger data from disk, from the specified directory. Returns
//  the number of posts loaded, or -1 if there was an error reading the
//  directory.
HYDRA_EXPORT int
    hydra_ledger_load (hydra_ledger_t *self);
//  *** Draft method, for development use, may change without warning ***
//  Save a post via the ledger. This saves the post to disk, adds the post
//  to the ledger, and then destroys the post. Use in place of
//  hydra_post_save to ensure post filenames are correctly generated.
HYDRA_EXPORT int
    hydra_ledger_store (hydra_ledger_t *self, hydra_post_t **post_p);
//  *** Draft method, for development use, may change without warning ***
//  Return post at specified index; if the index does not refer to a valid
//  post, returns NULL.
//  Caller owns return value and must destroy it when done.
HYDRA_EXPORT hydra_post_t *
    hydra_ledger_fetch (hydra_ledger_t *self, int index);
//  *** Draft method, for development use, may change without warning ***
//  Lookup post in ledger and return post index (0 .. size - 1); if the post
//  does not exist, returns -1.
HYDRA_EXPORT int
    hydra_ledger_index (hydra_ledger_t *self, const char *post_id);
//  *** Draft method, for development use, may change without warning ***
//  Self test of this class
HYDRA_EXPORT void
    hydra_ledger_test (bool verbose);