bindings/python/hydra/_hydra_ctypes.py


# hydra_post
lib.hydra_post_new.restype = hydra_post_p
lib.hydra_post_new.argtypes = [c_char_p]
lib.hydra_post_destroy.restype = None
lib.hydra_post_destroy.argtypes = [POINTER(hydra_post_p)]
lib.hydra_post_ident.restype = c_char_p
lib.hydra_post_ident.argtypes = [hydra_post_p]
lib.hydra_post_subject.restype = c_char_p
lib.hydra_post_subject.argtypes = [hydra_post_p]
lib.hydra_post_timestamp.restype = c_char_p
lib.hydra_post_timestamp.argtypes = [hydra_post_p]
lib.hydra_post_parent_id.restype = c_char_p
lib.hydra_post_parent_id.argtypes = [hydra_post_p]
lib.hydra_post_mime_type.restype = c_char_p
lib.hydra_post_mime_type.argtypes = [hydra_post_p]
lib.hydra_post_digest.restype = c_char_p
lib.hydra_post_digest.argtypes = [hydra_post_p]
lib.hydra_post_location.restype = c_char_p
lib.hydra_post_location.argtypes = [hydra_post_p]
lib.hydra_post_content_size.restype = c_int
lib.hydra_post_content_size.argtypes = [hydra_post_p]
lib.hydra_post_content.restype = POINTER(c_char)
lib.hydra_post_content.argtypes = [hydra_post_p]
lib.hydra_post_set_parent_id.restype = None
lib.hydra_post_set_parent_id.argtypes = [hydra_post_p, c_char_p]
lib.hydra_post_set_mime_type.restype = None
lib.hydra_post_set_mime_type.argtypes = [hydra_post_p, c_char_p]
lib.hydra_post_set_content.restype = None
lib.hydra_post_set_content.argtypes = [hydra_post_p, c_char_p]
lib.hydra_post_set_data.restype = None
lib.hydra_post_set_data.argtypes = [hydra_post_p, c_void_p, c_int]
lib.hydra_post_set_file.restype = c_int
lib.hydra_post_set_file.argtypes = [hydra_post_p, c_char_p]
lib.hydra_post_save.restype = c_int
lib.hydra_post_save.argtypes = [hydra_post_p, c_char_p]
lib.hydra_post_load.restype = hydra_post_p
lib.hydra_post_load.argtypes = [c_char_p]
lib.hydra_post_fetch.restype = czmq.zchunk_p
lib.hydra_post_fetch.argtypes = [hydra_post_p, c_int, c_int]
lib.hydra_post_encode.restype = None
lib.hydra_post_encode.argtypes = [hydra_post_p, hydra_proto_p]
lib.hydra_post_decode.restype = hydra_post_p
lib.hydra_post_decode.argtypes = [hydra_proto_p]
lib.hydra_post_dup.restype = hydra_post_p
lib.hydra_post_dup.argtypes = [hydra_post_p]
lib.hydra_post_print.restype = None
lib.hydra_post_print.argtypes = [hydra_post_p]
lib.hydra_post_test.restype = None
lib.hydra_post_test.argtypes = [c_bool]

class HydraPost(object):
    """
    Main Hydra API
    """

    allow_destruct = False
    def __init__(self, *args):
        """
        Create a new post
        """
        if len(args) == 2 and type(args[0]) is c_void_p and isinstance(args[1], bool):
            self._as_parameter_ = cast(args[0], hydra_post_p) # Conversion from raw type to binding
            self.allow_destruct = args[1] # This is a 'fresh' value, owned by us
        elif len(args) == 2 and type(args[0]) is hydra_post_p and isinstance(args[1], bool):
            self._as_parameter_ = args[0] # Conversion from raw type to binding
            self.allow_destruct = args[1] # This is a 'fresh' value, owned by us
        else:
            assert(len(args) == 1)
            self._as_parameter_ = lib.hydra_post_new(args[0]) # Creation of new raw type
            self.allow_destruct = True

    def __del__(self):
        """
        Destroy the post
        """
        if self.allow_destruct:
            lib.hydra_post_destroy(byref(self._as_parameter_))

    def __eq__(self, other):
        if type(other) == type(self):
            return other.c_address() == self.c_address()
        elif type(other) == c_void_p:
            return other.value == self.c_address()

    def c_address(self):
        """
        Return the address of the object pointer in c.  Useful for comparison.
        """
        return addressof(self._as_parameter_.contents)

    def __bool__(self):
        "Determine whether the object is valid by converting to boolean" # Python 3
        return self._as_parameter_.__bool__()

    def __nonzero__(self):
        "Determine whether the object is valid by converting to boolean" # Python 2
        return self._as_parameter_.__nonzero__()

    def ident(self):
        """
        Recalculate the post ID based on subject, timestamp, parent id, MIME
type, and content digest, and return post ID to caller.
        """
        return lib.hydra_post_ident(self._as_parameter_)

    def subject(self):
        """
        Return the post subject, if set
        """
        return lib.hydra_post_subject(self._as_parameter_)

    def timestamp(self):
        """
        Return the post timestamp
        """
        return lib.hydra_post_timestamp(self._as_parameter_)

    def parent_id(self):
        """
        Return the post parent id, or empty string if not set
        """
        return lib.hydra_post_parent_id(self._as_parameter_)

    def mime_type(self):
        """
        Return the post MIME type, if set
        """
        return lib.hydra_post_mime_type(self._as_parameter_)

    def digest(self):
        """
        Return the post content digest
        """
        return lib.hydra_post_digest(self._as_parameter_)

    def location(self):
        """
        Return the post content location
        """
        return lib.hydra_post_location(self._as_parameter_)

    def content_size(self):
        """
        Return the post content size
        """
        return lib.hydra_post_content_size(self._as_parameter_)

    def content(self):
        """
        Return the post content as a string. Returns NULL if the MIME type is
not "text/plain". The caller must destroy the string when finished with it.
        """
        return return_fresh_string(lib.hydra_post_content(self._as_parameter_))

    def set_parent_id(self, parent_id):
        """
        Set the post parent id, which must be a valid post ID
        """
        return lib.hydra_post_set_parent_id(self._as_parameter_, parent_id)

    def set_mime_type(self, mime_type):
        """
        Set the post MIME type
        """
        return lib.hydra_post_set_mime_type(self._as_parameter_, mime_type)

    def set_content(self, content):
        """
        Set the post content to a text string. Recalculates the post digest from
from the new content value. Sets the MIME type to text/plain.
        """
        return lib.hydra_post_set_content(self._as_parameter_, content)

    def set_data(self, data, size):
        """
        Set the post content to a chunk of data. Recalculates the post digest
from the chunk contents. Takes ownership of the chunk. The data is not
stored on disk until you call hydra_post_save.
        """
        return lib.hydra_post_set_data(self._as_parameter_, data, size)

    def set_file(self, location):
        """
        Set the post content to point to a specified file. The file must exist.
Recalculates the post digest from the file contents. Returns 0 if OK, -1
if the file was unreadable.
        """
        return lib.hydra_post_set_file(self._as_parameter_, location)

    def save(self, filename):
        """
        Save the post to disk under the specified filename. Returns 0 if OK, -1
if the file could not be created. Posts are always stored in the "posts"
subdirectory of the current working directory. Note: for internal use
only.
        """
        return lib.hydra_post_save(self._as_parameter_, filename)

    @staticmethod
    def load(filename):
        """
        Load post from the specified filename. Posts are always read from the
"posts" subdirectory of the current working directory. Returns a new post
instance if the file could be loaded, else returns null.
        """
        return HydraPost(lib.hydra_post_load(filename), True)

    def fetch(self, size, offset):
        """
        Fetch a chunk of content for the post. The caller specifies the size and
offset of the chunk. A size of 0 means all content, which will fail if
there is insufficient memory available. The caller must destroy the chunk
when finished with it.
        """
        return czmq.Zchunk(lib.hydra_post_fetch(self._as_parameter_, size, offset), True)

    def encode(self, proto):
        """
        Encode a post metadata to a hydra_proto message
        """
        return lib.hydra_post_encode(self._as_parameter_, proto)

    @staticmethod
    def decode(proto):
        """
        Create a new post from a hydra_proto HEADER-OK message.
        """
        return HydraPost(lib.hydra_post_decode(proto), True)

    def dup(self):
        """
        Duplicate a post instance. Does not create a new post on disk; this
provides a second instance of the same post item.
        """
        return HydraPost(lib.hydra_post_dup(self._as_parameter_), True)

    def print(self):
        """
        Print the post file to stdout
        """
        return lib.hydra_post_print(self._as_parameter_)

    @staticmethod
    def test(verbose):
        """
        Self test of this class
        """
        return lib.hydra_post_test(verbose)


# hydra_ledger
lib.hydra_ledger_new.restype = hydra_ledger_p
lib.hydra_ledger_new.argtypes = []
lib.hydra_ledger_destroy.restype = None
lib.hydra_ledger_destroy.argtypes = [POINTER(hydra_ledger_p)]
lib.hydra_ledger_size.restype = c_int
lib.hydra_ledger_size.argtypes = [hydra_ledger_p]
lib.hydra_ledger_load.restype = c_int
lib.hydra_ledger_load.argtypes = [hydra_ledger_p]
lib.hydra_ledger_store.restype = c_int
lib.hydra_ledger_store.argtypes = [hydra_ledger_p, POINTER(hydra_post_p)]
lib.hydra_ledger_fetch.restype = hydra_post_p
lib.hydra_ledger_fetch.argtypes = [hydra_ledger_p, c_int]
lib.hydra_ledger_index.restype = c_int
lib.hydra_ledger_index.argtypes = [hydra_ledger_p, c_char_p]
lib.hydra_ledger_test.restype = None
lib.hydra_ledger_test.argtypes = [c_bool]

class HydraLedger(object):
    """
    work with Hydra ledger of posts
    """

    allow_destruct = False
    def __init__(self, *args):
        """
        Create a new empty ledger instance.
        """
        if len(args) == 2 and type(args[0]) is c_void_p and isinstance(args[1], bool):
            self._as_parameter_ = cast(args[0], hydra_ledger_p) # Conversion from raw type to binding
            self.allow_destruct = args[1] # This is a 'fresh' value, owned by us
        elif len(args) == 2 and type(args[0]) is hydra_ledger_p and isinstance(args[1], bool):
            self._as_parameter_ = args[0] # Conversion from raw type to binding
            self.allow_destruct = args[1] # This is a 'fresh' value, owned by us
        else:
            assert(len(args) == 0)
            self._as_parameter_ = lib.hydra_ledger_new() # Creation of new raw type
            self.allow_destruct = True

    def __del__(self):
        """
        Destroy the ledger
        """
        if self.allow_destruct:
            lib.hydra_ledger_destroy(byref(self._as_parameter_))

    def __eq__(self, other):
        if type(other) == type(self):
            return other.c_address() == self.c_address()
        elif type(other) == c_void_p:
            return other.value == self.c_address()

    def c_address(self):
        """
        Return the address of the object pointer in c.  Useful for comparison.
        """
        return addressof(self._as_parameter_.contents)

    def __bool__(self):
        "Determine whether the object is valid by converting to boolean" # Python 3
        return self._as_parameter_.__bool__()

    def __nonzero__(self):
        "Determine whether the object is valid by converting to boolean" # Python 2
        return self._as_parameter_.__nonzero__()

    def size(self):
        """
        Return ledger size, i.e. number of posts stored in the ledger.
        """
        return lib.hydra_ledger_size(self._as_parameter_)

    def load(self):
        """
        Load the ledger data from disk, from the specified directory. Returns
the number of posts loaded, or -1 if there was an error reading the
directory.
        """
        return lib.hydra_ledger_load(self._as_parameter_)
